--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
         <tr>
             <td class="other-td"></td>
             <td class="second-td">
-                <h2>Компанія “Хата Плюс”</h2>
-                <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
-                    і насолоджуватися життям в гармонії з природою. Дійсно, 
-                    для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною
-                </p>
-                <a class="button-about" href="#">Детальніше про нас</a>
+                <table cellspacing="0" cellpadding="0" class="table-1">
+                    <tr>
+                        <td><h2>Компанія “Хата Плюс”</h2></td>
+                    </tr>
+                    <tr>
+                        <td><p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
+                            і насолоджуватися життям в гармонії з природою. Дійсно, 
+                            для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною
+                        </p></td>
+                    </tr>
+                    <tr>
+                        <td><a class="button-about" href="#">Детальніше про нас</a></td>
+                    </tr>
+                </table>
             </td>
             <td class="other-td"></td>
         </tr>
@@ -62,11 +70,72 @@
         <tr>
             <td class="other-td"></td>
             <td>
-                <img class="cotage-1" src="../hata-newsletter/img/Curves 2.png" alt="">
-                <h3 class="montreal">MONTREAL (332 м2)</h3>
-                <p class="montreal-p">Містечко оточене сосновим і листяним лісом, чи не на кожній дільниці сосна, береза або клен.</p>
+                <table cellspacing="0" cellpadding="0" class="table-cotage">
+                    <tr>
+                        <td><img src="../hata-newsletter/img/Curves 2.png" alt=""></td>
+                        <td>
+                            <h3 >MONTREAL (332 м2)</h3>
+                            <p>Містечко оточене сосновим і листяним лісом, 
+                                чи не на кожній дільниці сосна, береза або клен.</p>
+                            <p>Загальна площа будови: 290 м2
+                                Кількість спалень: 3
+                                Гараж: 2 авто</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h3>EDMONTON (338 м2)</h3>
+                            <p>Тут є все для комфортної життя: вода 
+                                з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
+                            <p>Загальна площа будови: 312 м2
+                                Кількість спалень: 4
+                                Гараж: 2 авто</p>
+                        </td>
+                        <td>
+                            <img src="../hata-newsletter/img/Curves 1.png" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="../hata-newsletter/img/Curves 3.png" alt="">
+                        </td>
+                        <td>
+                            <h3>CALGARY (294 м2)</h3>
+                            <p>Для діток тут побудована ігровий 
+                                та спортивний майданчик, а недалеко 
+                                від містечка знаходяться дитячий садок.</p>
+                            <p>Загальна площа будови: 272 м2
+                                Кількість спалень: 3
+                                Гараж: 2 авто</p>
+                        </td>
+                    </tr>
+                </table>
             </td>
             <td class="other-td"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <table cellspacing="0" cellpadding="0" class="table-sale">
+                    <tr>
+                        <td>
+                            <h2>Отримай знижку -10%</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                                Акція триває в період з 21.04.2018 по 31.10.2018 включно.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#">Прийняти участь</a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td></td>
         </tr>
     </table>
 </body>
