--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <td class="other-td"></td>
         </tr>
         <tr>
-            <td></td>
+            <td class="other-td"></td>
             <td>
                 <table cellspacing="0" cellpadding="0" class="table-sale">
                     <tr>
@@ -130,12 +130,46 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="#">Прийняти участь</a>
+                            <div class="button-join">
+                                <a href="#">Прийняти участь</a>
+                            </div>
                         </td>
                     </tr>
                 </table>
             </td>
-            <td></td>
+            <td class="other-td"></td>
+        </tr>
+        <tr>
+            <td class="top-td"></td>
+            <td>
+                <table cellspacing="0" cellpadding="0" class="table-footer">
+                    <tr>
+                        <td class="table-footer-img">
+                            <ul>
+                                <li><a href=""><img src="../hata-newsletter/img/hata-newsletter (2).jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/fb.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/wifi.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/print.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/g+.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/soc-1.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/in.jpg" alt=""></a></li>
+                                <li><a href=""><img src="../hata-newsletter/img/hz.jpg" alt=""></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="table-footer-copy">© Будівельна компанія “Хата Плюс” 2018.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td >
+                            <p class="table-footer-unscrable"><a href="#">Перейти на сайт</a>  |  <a href="#">Відписатися</a></p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="top-td"></td>
         </tr>
     </table>
 </body>
