--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <tr>
             <td class="top-td"></td>
             <td class="second-td">
-                <img class="logo" src="../hata-newsletter/img/logo.png" alt="">
-                <p class="info-top"><img src="../hata-newsletter/img/phone.png" alt=""><span class="tel-top">+38(097) 100-25-25</span><br><span class="tel-kontakt">контактний телефон у Вашому місті</span></p>
+                <img class="logo" src="https://github.com/Svithm/hata-newsletter/blob/main/img/logo.png?raw=true" alt="">
+                <p class="info-top"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/phone.png?raw=true" alt=""><span class="tel-top">+38(097) 100-25-25</span><br><span class="tel-kontakt">контактний телефон у Вашому місті</span></p>
             </td>
             <td class="top-td"></td>
         </tr>
         <tr>
             <td class="other-td"></td>
             <td>
-                <img src="../hata-newsletter/img/hata-newsletter.jpg" alt="">
+                <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter.jpg?raw=true" alt="">
             </td>
             <td class="other-td"></td>
         </tr>
@@ -49,9 +49,9 @@
             <td>
                 <table class="table-2" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td><img class="table-2-img" src="../hata-newsletter/img/Composite Path.png" alt=""></td>
-                        <td ><img class="table-2-img" src="../hata-newsletter/img/Composite Path (1).png" alt=""></td>
-                        <td><img class="table-2-img" src="../hata-newsletter/img/Path.png" alt=""></td>
+                        <td><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path.png?raw=true" alt=""></td>
+                        <td ><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path%20(1).png?raw=true" alt=""></td>
+                        <td><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Path.png?raw=true" alt=""></td>
                     </tr>
                     <tr>
                         <td><h4>Зручне розташування</h4></td>
@@ -72,7 +72,7 @@
             <td>
                 <table cellspacing="0" cellpadding="0" class="table-cotage">
                     <tr>
-                        <td><img src="../hata-newsletter/img/Curves 2.png" alt=""></td>
+                        <td><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%202.png?raw=true" alt=""></td>
                         <td>
                             <h3 >MONTREAL (332 м2)</h3>
                             <p>Містечко оточене сосновим і листяним лісом, 
@@ -92,12 +92,12 @@
                                 Гараж: 2 авто</p>
                         </td>
                         <td>
-                            <img src="../hata-newsletter/img/Curves 1.png" alt="">
+                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%201.png?raw=true" alt="">
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="../hata-newsletter/img/Curves 3.png" alt="">
+                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%203.png?raw=true" alt="">
                         </td>
                         <td>
                             <h3>CALGARY (294 м2)</h3>
@@ -129,10 +129,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <div class="button-join">
-                                <a href="#">Прийняти участь</a>
-                            </div>
+                        <td class="button-join">
+                            <a href="#">Прийняти участь</a>
                         </td>
                     </tr>
                 </table>
@@ -146,14 +144,14 @@
                     <tr>
                         <td class="table-footer-img">
                             <ul>
-                                <li><a href=""><img src="../hata-newsletter/img/hata-newsletter (2).jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/fb.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/wifi.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/print.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/g+.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/soc-1.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/in.jpg" alt=""></a></li>
-                                <li><a href=""><img src="../hata-newsletter/img/hz.jpg" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter%20(2).jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/fb.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/wifi.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/print.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/g%2B.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/soc-1.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/in.jpg?raw=true" alt=""></a></li>
+                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hz.jpg?raw=true" alt=""></a></li>
                             </ul>
                         </td>
                     </tr>
