--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
                     <tr>
                         <td class="table-footer-img">
                             <ul>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter%20(2).jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/fb.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/wifi.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/print.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/g%2B.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/soc-1.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/in.jpg?raw=true" alt=""></a></li>
-                                <li><a href=""><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hz.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter%20(2).jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/fb.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/wifi.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/print.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/g%2B.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/soc-1.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/in.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hz.jpg?raw=true" alt=""></a></li>
                             </ul>
                         </td>
                     </tr>
