--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,18 @@
     <title>Hata-newsletter</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <table cellspacing="0" cellpadding="0">
         <tr>
             <td class="top-td"></td>
             <td class="second-td">
-                <img class="logo" src="https://github.com/Svithm/hata-newsletter/blob/main/img/logo.png?raw=true" alt="">
-                <p class="info-top"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/phone.png?raw=true" alt=""><span class="tel-top">+38(097) 100-25-25</span><br><span class="tel-kontakt">контактний телефон у Вашому місті</span></p>
+                <img class="logo" src="https://github.com/Svithm/hata-newsletter/blob/main/img/logo.png?raw=true"
+                    alt="">
+                <p class="info-top"><img
+                        src="https://github.com/Svithm/hata-newsletter/blob/main/img/phone.png?raw=true" alt=""><span
+                        class="tel-top"><a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a></span><br><span
+                        class="tel-kontakt">контактний телефон у Вашому місті</span></p>
             </td>
             <td class="top-td"></td>
         </tr>
@@ -29,13 +35,18 @@
             <td class="second-td">
                 <table cellspacing="0" cellpadding="0" class="table-1">
                     <tr>
-                        <td><h2>Компанія “Хата Плюс”</h2></td>
+                        <td>
+                            <h2>Компанія “Хата Плюс”</h2>
+                        </td>
                     </tr>
                     <tr>
-                        <td><p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
-                            і насолоджуватися життям в гармонії з природою. Дійсно, 
-                            для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною
-                        </p></td>
+                        <td>
+                            <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж
+                                і насолоджуватися життям в гармонії з природою. Дійсно,
+                                для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою
+                                віддушиною
+                            </p>
+                        </td>
                     </tr>
                     <tr>
                         <td><a class="button-about" href="#">Детальніше про нас</a></td>
@@ -49,19 +60,37 @@
             <td>
                 <table class="table-2" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path.png?raw=true" alt=""></td>
-                        <td ><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path%20(1).png?raw=true" alt=""></td>
-                        <td><img class="table-2-img" src="https://github.com/Svithm/hata-newsletter/blob/main/img/Path.png?raw=true" alt=""></td>
+                        <td><img class="table-2-img"
+                                src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path.png?raw=true"
+                                alt=""></td>
+                        <td><img class="table-2-img"
+                                src="https://github.com/Svithm/hata-newsletter/blob/main/img/Composite%20Path%20(1).png?raw=true"
+                                alt=""></td>
+                        <td><img class="table-2-img"
+                                src="https://github.com/Svithm/hata-newsletter/blob/main/img/Path.png?raw=true" alt="">
+                        </td>
                     </tr>
                     <tr>
-                        <td><h4>Зручне розташування</h4></td>
-                        <td><h4>Широкий вибір</h4></td>
-                        <td><h4>Дика природа</h4></td>
+                        <td>
+                            <h4>Зручне розташування</h4>
+                        </td>
+                        <td>
+                            <h4>Широкий вибір</h4>
+                        </td>
+                        <td>
+                            <h4>Дика природа</h4>
+                        </td>
                     </tr>
                     <tr>
-                        <td><p>Наші котеджі знаходяться по всій країні</p></td>
-                        <td><p>Понад 50 видів котеджів з усіма зручностями</p></td>
-                        <td><p>Скалиста місцевіть, свіже повітря, та риболовля</p></td>
+                        <td>
+                            <p>Наші котеджі знаходяться по всій країні</p>
+                        </td>
+                        <td>
+                            <p>Понад 50 видів котеджів з усіма зручностями</p>
+                        </td>
+                        <td>
+                            <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
+                        </td>
                     </tr>
                 </table>
             </td>
@@ -72,37 +101,46 @@
             <td>
                 <table cellspacing="0" cellpadding="0" class="table-cotage">
                     <tr>
-                        <td><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%202.png?raw=true" alt=""></td>
+                        <td><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%202.png?raw=true"
+                                alt=""></td>
                         <td>
-                            <h3 >MONTREAL (332 м2)</h3>
-                            <p>Містечко оточене сосновим і листяним лісом, 
+                            <h3>MONTREAL (332 м2)</h3>
+                            <p>Містечко оточене сосновим і листяним лісом,
                                 чи не на кожній дільниці сосна, береза або клен.</p>
                             <p>Загальна площа будови: 290 м2
                                 Кількість спалень: 3
                                 Гараж: 2 авто</p>
                         </td>
                     </tr>
+                </table>
+                <hr style="width: 100%; border-style: solid; border-color: #e3e3eb;">
+                <table cellspacing="0" cellpadding="0" class="table-cotage">
                     <tr>
                         <td>
                             <h3>EDMONTON (338 м2)</h3>
-                            <p>Тут є все для комфортної життя: вода 
+                            <p>Тут є все для комфортної життя: вода
                                 з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
                             <p>Загальна площа будови: 312 м2
                                 Кількість спалень: 4
                                 Гараж: 2 авто</p>
                         </td>
                         <td>
-                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%201.png?raw=true" alt="">
+                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%201.png?raw=true"
+                                alt="">
                         </td>
                     </tr>
+                </table>
+                <hr style="width: 100%; border-style: solid; border-color: #e3e3eb;">
+                <table cellspacing="0" cellpadding="0" class="table-cotage">
                     <tr>
                         <td>
-                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%203.png?raw=true" alt="">
+                            <img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%203.png?raw=true"
+                                alt="">
                         </td>
                         <td>
                             <h3>CALGARY (294 м2)</h3>
-                            <p>Для діток тут побудована ігровий 
-                                та спортивний майданчик, а недалеко 
+                            <p>Для діток тут побудована ігровий
+                                та спортивний майданчик, а недалеко
                                 від містечка знаходяться дитячий садок.</p>
                             <p>Загальна площа будови: 272 м2
                                 Кількість спалень: 3
@@ -113,6 +151,7 @@
             </td>
             <td class="other-td"></td>
         </tr>
+        <td class="other-td"></td>
         <tr>
             <td class="other-td"></td>
             <td>
@@ -144,14 +183,30 @@
                     <tr>
                         <td class="table-footer-img">
                             <ul>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter%20(2).jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/fb.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/wifi.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/print.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/g%2B.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/soc-1.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/in.jpg?raw=true" alt=""></a></li>
-                                <li><a href="#"><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/hz.jpg?raw=true" alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/hata-newsletter%20(2).jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/fb.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/wifi.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/print.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/g%2B.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/soc-1.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/in.jpg?raw=true"
+                                            alt=""></a></li>
+                                <li><a href="#"><img
+                                            src="https://github.com/Svithm/hata-newsletter/blob/main/img/hz.jpg?raw=true"
+                                            alt=""></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -161,8 +216,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td >
-                            <p class="table-footer-unscrable"><a href="#">Перейти на сайт</a>  |  <a href="#">Відписатися</a></p>
+                        <td>
+                            <p class="table-footer-unscrable"><a href="#">Перейти на сайт</a> | <a href="#">Відписатися</a>
+                            </p>
                         </td>
                     </tr>
                 </table>
