--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     alt="">
                 <p class="info-top"><img
                         src="https://github.com/Svithm/hata-newsletter/blob/main/img/phone.png?raw=true" alt=""><span
-                        class="tel-top"><a href="tel:+38(097) 100-25-25">+38(097) 100-25-25</a></span><br><span
+                        class="tel-top"><a href="tel:+380971002525">+38(097) 100-25-25</a></span><br><span
                         class="tel-kontakt">контактний телефон у Вашому місті</span></p>
             </td>
             <td class="top-td"></td>
@@ -168,7 +168,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="button-join">
+                        <td style="padding-bottom: 34px;" class="button-join">
                             <a href="#">Прийняти участь</a>
                         </td>
                     </tr>
