--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <tr>
             <td class="top-td"></td>
             <td class="second-td">
-                <img class="logo" src="https://github.com/Svithm/hata-newsletter/blob/main/img/logo.png?raw=true"
-                    alt="">
+                <a href="https://svithm.github.io/hata-plus/#">
+                <img class="logo" src="https://github.com/Svithm/hata-newsletter/blob/main/img/logo.png?raw=true" alt="Logo Hata-plus">
+                </a>
                 <p class="info-top"><img
                         src="https://github.com/Svithm/hata-newsletter/blob/main/img/phone.png?raw=true" alt=""><span
                         class="tel-top"><a href="tel:+380971002525">+38(097) 100-25-25</a></span><br><span
@@ -49,7 +50,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><a class="button-about" href="#">Детальніше про нас</a></td>
+                        <td><a class="button-about" href="https://svithm.github.io/hata-plus/contacts.html">Детальніше про нас</a></td>
                     </tr>
                 </table>
             </td>
@@ -104,7 +105,9 @@
                         <td><img src="https://github.com/Svithm/hata-newsletter/blob/main/img/Curves%202.png?raw=true"
                                 alt=""></td>
                         <td>
-                            <h3>MONTREAL (332 м2)</h3>
+                            <a style="text-decoration: none;" href="https://svithm.github.io/hata-plus/price.html">
+                                <h3>MONTREAL (332 м<sup>2</sup>)</h3>
+                            </a>
                             <p>Містечко оточене сосновим і листяним лісом,
                                 чи не на кожній дільниці сосна, береза або клен.</p>
                             <p>Загальна площа будови: 290 м2
@@ -117,7 +120,9 @@
                 <table cellspacing="0" cellpadding="0" class="table-cotage">
                     <tr>
                         <td>
-                            <h3>EDMONTON (338 м2)</h3>
+                            <a style="text-decoration: none;" href="https://svithm.github.io/hata-plus/price.html">
+                                <h3>EDMONTON (338 <sup>м2</sup>)</h3>
+                            </a>
                             <p>Тут є все для комфортної життя: вода
                                 з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
                             <p>Загальна площа будови: 312 м2
@@ -138,7 +143,9 @@
                                 alt="">
                         </td>
                         <td>
-                            <h3>CALGARY (294 м2)</h3>
+                            <a style="text-decoration: none;" href="https://svithm.github.io/hata-plus/price.html">
+                                <h3>CALGARY (294 м<sup>2</sup>)</h3>
+                            </a>
                             <p>Для діток тут побудована ігровий
                                 та спортивний майданчик, а недалеко
                                 від містечка знаходяться дитячий садок.</p>
@@ -217,7 +224,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p class="table-footer-unscrable"><a href="#">Перейти на сайт</a> | <a href="#">Відписатися</a>
+                            <p class="table-footer-unscrable"><a href="https://svithm.github.io/hata-plus/index.html">Перейти на сайт</a> | <a href="#">Відписатися</a>
                             </p>
                         </td>
                     </tr>
